[project]
name = "stackoverflow-survey-analysis"
version = "0.1.0"
description = "Stack Overflow Developer Survey 2025 - Data Analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
